# synthesizer

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.py  settings.json
asiosdk2/common/: asio.cpp  combase.h
asiosdk2/host/: asiodrivers.h
asiosdk2/host/sample/: hostsample.vcxproj  hostsample.vcxproj.filters
builder/: gcc.py  objcache.py
cmake/sdl2/: FindSDL2.cmake
layouts/: US-standard.json
portaudio/base/: build.py  clean.py  hostfile.json  update.py
portaudio/base/scripts/: gcc.py
portaudio/base/src/: main.c
portaudio/base/src/network/: network.c  network.h  server.c
portaudio/base/src/resource/: resource-loaded.c  resource.c  resource.h
portaudio/src/hostapi/asio/: iasiothiscallresolver.h  pa_asio.cpp
portaudio/src/os/win/: pa_x86_plain_converters.c
src/: synthesizer.cpp
src/components/: mixer.c  mixer.h  normalizer.c  normalizer.h  synth.c  synth.h
src/fileio/: fileio.c  fileio.h
src/fileio/os/unix/: mkdir.c
src/fileio/os/win/: mkdir.c
src/instruments/: saw.c  saw.h  sine.c  square.c  square.h
src/interface/: interface.c  interface.h
src/interface/controls/: button.c  button.h  groupbox.c  groupbox.h  keyboard_ctrl.c  keyboard_ctrl.h  label.c  label.h
src/keyboard/: activekeys.c  activekeys.h  activenotes.c  activenotes.h  keyboard.c  keyboard.h  keymap.c  keymap.h  synthesizer - Shortcut.lnk
src/keyboard/os/win/: keyboard.c
src/music/: freqmap.c  note.c  note.h  transpose.c
src/settings/: settings.c  settings.h
src/ui/: ui.c  ui.h  window.c  window.h
src/ui/controls/: fps_counter.c  fps_counter.h  keyboard_ctrl.c  keyboard_ctrl.h  label.c  label.h  notes_text_ctrl.c  notes_text_ctrl.h  waveform.c  waveform.h
synthesizer/: synthesizer.cpp  synthesizer.sln
synthesizer/components/: mixer.c  mixer.h  normalizer.c  normalizer.h  synth.c  synth.h
synthesizer/instruments/: saw.c  sine.c  sine.h  square.c
synthesizer/interface/: interface.c  interface.h  waveform.c  waveform.h
synthesizer/interface/controls/: button.c  button.h  groupbox.c  groupbox.h  keyboard_ctrl.c  keyboard_ctrl.h  label.c  label.h  waveform.c
synthesizer/keyboard/: activekeys.c  activekeys.h  activenotes.c  activenotes.h  keyboard.c  keyboard.h  keymap.c  keymap.h
synthesizer/music/: freqmap.c  freqmap.h  note.h  transpose.c  transpose.h
synthesizer/synthesizer/: synthesizer.cpp  synthesizer.vcxproj  synthesizer.vcxproj.filters
synthesizer/synthesizer/Components/: mixer.c  normalizer.c  synth.c  synth.h
synthesizer/synthesizer/Instruments/: saw.c  saw.h  square.h
synthesizer/synthesizer/Interface/: groupbox.c  groupbox.h  interface.c  interface.h
synthesizer/synthesizer/Keyboard/: activekeys.c  activekeys.h  activenotes.c  activenotes.h  keyboard.c  keyboard.h  keymap.c  keymap.h
synthesizer/synthesizer/Music/: freqmap.c  note.h  transpose.c
ui/: ui.cpp
